@@ -1,3 +1,4 @@
+7/30/13 improve performance of concentration display by drawing arrow once and changing its y position, #4
 7/30/13 improve performance of drawing solution by making more efficient use of shapes, #4
 7/29/13 add google-analytics.js to html and package.json
 7/29/13 add meta tags that are in chipper.sim.html
